update : image path

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
                 <div class="card-content">
 
                     <p style=" display: flex; justify-content: center; align-items: center;">
-                        <img src="/image/ipad-logo.png" class="w-[100%] "
+                        <img src="./image/ipad-logo.png" class="w-[100%] "
                             style="margin-bottom: 10px; background: none; height: 40px; width: 200px;" alt="">
                     </p>
                     <p class="card-description">Now supercharged by the S9 chip.</p>
@@ -627,7 +627,7 @@
             <section class="product-card ipad-air-card">
                 <div class="card-content">
                     <p style=" display: flex; justify-content: center; align-items: center;">
-                        <img src="/image/trade-logo.png" class="w-[100%] "
+                        <img src="./image/trade-logo.png" class="w-[100%] "
                             style="margin-bottom: 10px; background: none; height: 30px; width: 150px;" alt="">
                     </p>
                     <p class="card-description">Get up to $180-$670
