fix error mimic apple

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apple</title>
+    <title>Apple Clone - Educational Project</title>
+    <meta name="description"
+        content="This is a student project created for educational purposes only. It is a clone of the Apple website layout and is not affiliated with Apple Inc.">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="dist/output.css">
@@ -17,6 +19,12 @@
 
 <body>
 
+
+    <!-- Educational Banner -->
+    <div class="educational-banner">
+        <p><strong>Note:</strong> This is an educational project/clone. I am not Apple. This site is for demonstration
+            purposes only.</p>
+    </div>
 
 
     <!-- Main Navigation -->
